# bank-analytics

./: .env_template  .flake8  .gitignore  README.md  pyproject.toml  report_2021-12-31_00-00-00.json  test_services_reports.py
src/: logger_config.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_read.py  test_reports.py  test_services.py  test_utils.py  test_views.py
